:sparkles: add claims CRUD
add CRUD of claims context
